[package]
name = "bevy-potree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["opd", "las"]
opd = ["opd-parser"]

[dependencies]
bevy = "0.9"
opd-parser = { version = "0.1.0", registry = "foresight-mining-software-corporation", optional = true }
anyhow = "1"
las = { version = "0.8", features = ["laz"], optional = true }

[dev-dependencies]
smooth-bevy-cameras = { git = "https://github.com/olegomon/smooth-bevy-cameras" }

