[package]
name = "bevy_fsc_point_cloud"
description = "Point cloud renderer for Bevy"
version = "0.1.0"
edition = "2021"
authors = [
    "Zhixing Zhang <zhixing.zhang@foresightmining.com>"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/bevy_fsc_pointcloud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["opd", "las"]
opd = ["opd-parser"]

[dependencies]
bevy = "0.10"
opd-parser = { version = "0.3.0", optional = true }
anyhow = "1"
las = { version = "0.8", features = ["laz"], optional = true }

[dev-dependencies]
smooth-bevy-cameras = "0.8"
